--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,3 +1,10 @@
+//TIPOGRAFIA
+$fuente_principal: 'Montserrat', sans-serif;
 
-
-$color: purple;
+//COLORES
+$verde: #4CB8B3;
+$rosa: #F53756;
+$amarillo: #FEF46D;
+$morado: #752F97;
+$negro: #000;
+$blanco: #fff;
