--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,9 +2,9 @@
 $fuente_principal: 'Montserrat', sans-serif;
 
 //COLORES
-$verde: #4CB8B3;
-$rosa: #F53756;
-$amarillo: #FEF46D;
-$morado: #752F97;
+$verde: #355C7D;
+$rosa: #F67280;
+$amarillo: #F8B195;
+$morado: #C06C84;
 $negro: #000;
 $blanco: #fff;
