--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 //TIPOGRAFIA
-$fuente_principal: 'Montserrat', sans-serif;
+$fuente_principal: 'Roboto', sans-serif;;
 
 //COLORES
 $azul: #355C7D;
@@ -8,8 +8,8 @@ $amarillo: #F8B195;
 $morado: #C06C84;
 $negro: #000;
 $blanco: #eee;
-$verde: #32612D;
-$verdeClaro: #69B561;
+$verde: #94bc8c;
+$verdeClaro: #bcd5b7;
 
 //MEDIA QUERIES
 $telefono: 480px;
